--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <meta name="description"
             content="ScanKhach - Ứng dụng quét mã barcode 128 bằng camera điện thoại" />
+        <meta name="theme-color" content="#1890ff" />
+        <!-- Camera permission for Android -->
+        <meta name="permissions" content="camera" />
+        <!-- Allow camera access on Android -->
+        <meta http-equiv="Permissions-Policy"
+            content="camera=*, microphone=*" />
         <title>ScanKhach - Barcode Scanner</title>
     </head>
     <body>
